site header padding fix, page-wrap padding

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -29,7 +29,7 @@ body {
 	box-shadow: inset 0 -2px 5px rgb(0,0,0,.33);
 	display: flex;
 	justify-content: space-between;
-	padding: 1.5rem 2rem;
+	padding: 0 2rem;
 }
 
 .site-header a {
@@ -74,7 +74,7 @@ main a:visited {
 }
 
 .page-wrap {
-	padding: 2rem 0;
+	padding: 2rem 2rem;
 }
 
 #main-content h1.page-title {
